# sundaytranslate-relay

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml
scripts/: fetch-mediamtx.sh
src/: enroll.rs  lan.rs  lib.rs  main.rs  mediamtx.rs  register.rs  supervise.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: index.html
